# SynaesthetiQ-SpectrogramClass

./: .gitignore  CMakeLists.txt  ColourMap.ipynb  spectrogram.hpp
src/: Spectrogram.hpp  TurboColourMap.hpp
test/: TestSpectrogram.cpp  fftData.hpp
